<resources>
    <string name="app_name">Controle De Estoque</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Campos-->
    <string name="email">e-mail</string>
    <string name="senha">senha</string>
    <string name="telefone">número de celular</string>
    <string name="usuario">nome do usuário</string>
    <string name="msg">digite sua mensagem aqui</string>

    <string name="cadastro_nome">nome do produto</string>
    <string name="cadastro_descrição">descrição do produto</string>
    <string name="cadastro_qtd">Qtd:</string>
    <string name="cadastro_codigo">código do produto</string>
    <string name="cadastro_valor">Valor(R$):</string>
    <string name="cadastro_foto">foto do produto</string>

    <string name="nome_usuario">John Smith</string>
    <string name="loja">Loja X</string>
    <string name="usuario_email">john_smith@email.com</string>

    <string name="prosoft">ProSoft</string>

    <!--Botões-->
    <string name="entrar">ENTRAR</string>
    <string name="login_invalido">Email/Senha inválido</string>
    <string name="mantenha_logado">Mantenha logado</string>
    <string name="login_cadastrar">Crie uma conta aqui</string>
    <string name="btn_cadastrar">Cadastrar</string>
    <string name="action_configuração">Configurações</string>
    <string name="action_sair">Sair</string>
    <string name="pagina_inicial">Início</string>
    <string name="sobre_app">Sobre o aplicativo</string>
    <string name="reclamação">Ajuda e comentários</string>
    <string name="action_compartilhar">Compartilhar</string>
    <string name="action_galeria">Galeria</string>
    <string name="action_codigo">Código de barras</string>
    <string name="action_sobre">Sobre</string>
    <string name="contato">Contato</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_tela__principal">Tela_Principal</string>
    <string name="action_tentar">Tentar novamente</string>
    <string name="action_ok">OK</string>
    <string name="action_enviar">Enviar</string>
    <string name="action_criar_nova_loja">Criar Nova Loja</string>

    <!--Avisos-->
    <string name="login_sucesso">Logado com sucesso</string>
    <string name="Login_incorreto">Usuário ou senha incorreto(s).</string>
    <string name="msg_saida">Aperte 2 vezes em seguida para sair</string>
    <string name="aviso_campo_vazio">Por favor,preencha todos os campos</string>
    <string name="cadastro_sucesso">Cadastrado com sucesso</string>
    <string name="cadastro_erro">Erro no cadastro, tente novamente</string>
    <string name="função_indisponivel">Função Indisponível no momento</string>
    <string name="no_internet"><u>Falha de internet</u></string>
    <string name="aviso_falha_internet">Este aplicativo precisa de internet para funcionar.</string>
    <string name="aviso_falha_internet2">Verifique se o aparelho tem acesso a internet</string>
    <string name="msg_reclamar">Por favor, relatar o problema nos campos embaixo</string>
    <string name="reclamação_enviada">Mensagem enviada</string>
    <string name="produto_cadastrado">Produto cadastrado</string>

    <!--Descrições-->
    <string name="fechar">fechar</string>
    <string name="img">Imagem de android</string>
    <string name="nada">nada</string>
    <string name="folha">folha</string>
    <string name="novo_produto"><u>Cadastro de Novo Produto</u></string>


    <string name="nome_empresa">Nome: ProSoft</string>
    <string name="email_empresa">Email: prosoft@gmail.com</string>
    <string name="sobre_prosoft">Descrição: Empresa nova, 3 cientistas de computação e muito zelo.</string>
    <string name="nome_da_loja">Nome da Loja</string>
    <string name="cnpj">CNPJ</string>
    <string name="proprietario">Proprietario</string>
    <string name="nova_loja">Nova Loja</string>
    <string name="senha_loja">Senha</string>
    <string name="confirmar_senha">Confirmar Senha</string>


</resources>
