<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_pag_inicial"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/pagina_inicial" />
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/action_codigo" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/action_galeria" />
        <item
            android:id="@+id/nav_config"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/action_configuração" />
    </group>

    <item android:title="@string/contato">
    <menu>
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/action_compartilhar" />
        <item
            android:id="@+id/nav_reclamar"
            android:icon="@drawable/ic_menu_forum"
            android:title="@string/reclamação" />
    </menu>
</item>
    <item android:title="@string/action_sobre">
        <menu>
            <item
                android:id="@+id/nav_sobre"
                android:icon="@drawable/ic_menu_info"
                android:title="@string/action_sobre" />
        </menu>
    </item>
    <item android:title="@string/action_sair">
        <menu>
            <item
                android:id="@+id/nav_sair"
                android:icon="@drawable/ic_menu_sair"
                android:title="@string/action_sair" />
        </menu>
    </item>

</menu>
