<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="300dp"
    android:layout_gravity="center"
    android:background="@color/bluedark"
    android:padding="5dp"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/img_close"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/cancel"
        android:layout_gravity="end"
        android:gravity="center"
        android:contentDescription="@string/fechar"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/android_greet"
            android:layout_gravity="center"
            android:contentDescription="@string/img"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_sobre"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/bluelight">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nome_empresa"
            android:textColor="@android:color/white"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_empresa"
            android:textColor="@android:color/white"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sobre_prosoft"
            android:textColor="@android:color/white"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="bottom">
        <Button
            android:id="@+id/btn_ok"
            android:background="@drawable/button_style_azul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/action_ok"
            android:textColor="@android:color/white"/>
    </LinearLayout>
</LinearLayout>