<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/bluedark"
    android:layout_margin="12dp"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center">
        <TextView
            android:id="@+id/titulo_loja"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:gravity="start"
            android:text="@string/nova_loja"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@android:color/white"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_gravity="end"
            android:gravity="end">
            <ImageView
                android:id="@+id/button_fechar_loja"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/cancel"
                android:layout_gravity="end"
                android:gravity="end"
                android:clickable="true"
                android:contentDescription="@string/fechar"
                android:focusable="true"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5sp"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">
        <TextView
            android:id="@+id/proprietario_ed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:gravity="start"
            android:text=""
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@android:color/white"/>
        <EditText
            android:id="@+id/loja_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nome_da_loja"
            android:textColorHint="@color/escuro"
            android:textColor="@android:color/white"
            android:inputType="text"
            android:singleLine="true"/>
        <EditText
            android:id="@+id/cnpj_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cnpj"
            android:textColorHint="@color/escuro"
            android:textColor="@android:color/white"
            android:inputType="textLongMessage"
            android:singleLine="true"/>
        <EditText
            android:id="@+id/senha_loja"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/senha_loja"
            android:textColorHint="@color/escuro"
            android:textColor="@android:color/white"
            android:inputType="textLongMessage"
            android:singleLine="true"
            />
        <EditText
            android:id="@+id/confirma_senha_loja"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/escuro"
            android:hint="@string/confirmar_senha"
            android:textColor="@android:color/white"
            android:inputType="textLongMessage"
            android:singleLine="true"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="bottom">
        <Button
            android:id="@+id/button_loja_cadastrar"
            android:background="@drawable/button_style_azul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_cadastrar"
            android:textColor="@android:color/white"/>
    </LinearLayout>
</LinearLayout>