<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="400dp"
    android:layout_gravity="center"
    android:background="@color/bluedark"
    android:padding="5sp"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center">
        <TextView
            android:id="@+id/titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:gravity="start"
            android:text="@string/novo_produto"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@android:color/white"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="end">
            <ImageView
                android:id="@+id/pdt_fechar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/cancel"
                android:layout_gravity="end"
                android:gravity="center"
                android:contentDescription="@string/fechar"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5sp"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">
        <EditText
            android:id="@+id/pd_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cadastro_nome"
            android:textColorHint="@color/escuro"
            android:textColor="@android:color/white"
            android:inputType="text"
            android:singleLine="true"/>
        <EditText
            android:id="@+id/pd_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cadastro_descrição"
            android:textColorHint="@color/escuro"
            android:textColor="@android:color/white"
            android:inputType="textLongMessage"
            android:singleLine="true"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/cadastro_qtd"
                android:gravity="center"
                android:textSize="18sp"
                android:paddingRight="5sp"
                android:textColor="@color/escuro"/>
            <EditText
                android:id="@+id/pd_qtd"
                android:layout_width="40sp"
                android:layout_height="wrap_content"
                android:textColorHint="@color/escuro"
                android:textColor="@android:color/white"
                android:inputType="number"
                android:singleLine="true"
                android:layout_gravity="start"
                android:gravity="center"/>
            <View
                android:layout_width="40sp"
                android:layout_height="match_parent"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cadastro_valor"
                android:gravity="center"
                android:textSize="18sp"
                android:paddingRight="5sp"
                android:textColor="@color/escuro"/>
            <EditText
                android:id="@+id/pd_valor"
                android:layout_width="40sp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:textColorHint="@color/escuro"
                android:textColor="@android:color/white"
                android:inputType="numberDecimal"
                android:singleLine="true"/>
        </LinearLayout>

        <EditText
            android:id="@+id/pd_codigo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cadastro_codigo"
            android:textColorHint="@color/escuro"
            android:textColor="@android:color/white"
            android:inputType="number"
            android:maxLength="16"
            android:singleLine="true"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="bottom">
        <Button
            android:id="@+id/btn_pd_cadastrar"
            android:background="@drawable/button_style_azul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_cadastrar"
            android:textColor="@android:color/white"/>
    </LinearLayout>
</LinearLayout>