<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="400dp"
    android:layout_gravity="center"
    android:background="@color/bluedark"
    android:padding="5dp"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/img_fechar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/cancel"
        android:layout_gravity="end"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/angry_droid"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reclamação"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/bluelight">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/msg_reclamar"
            android:textColor="@android:color/white"
            android:layout_gravity="center"
            android:textAlignment="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rec_email"
            android:hint="@string/email"
            android:textColorHint="@color/escuro"
            android:textColor="@android:color/white"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:paddingLeft="8sp"
            android:paddingRight="8sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rec_msg"
            android:hint="@string/msg"
            android:textColorHint="@color/escuro"
            android:textColor="@android:color/white"
            android:inputType="textLongMessage"
            android:paddingLeft="8sp"
            android:paddingRight="8sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="bottom">
        <Button
            android:id="@+id/btn_enviar"
            android:background="@drawable/button_style_azul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/action_enviar"
            android:textColor="@android:color/white"/>
    </LinearLayout>
</LinearLayout>