<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="300dp"
    android:layout_gravity="center"
    android:background="@color/bluedark"
    android:padding="5dp"
    android:orientation="vertical">
    <TextView
        android:id="@+id/txtX"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:text="X"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:background="@drawable/fundo_circulo"
        android:layout_gravity="end"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/android"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_internet"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/holo_red_light">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aviso_falha_internet"
            android:textColor="@android:color/white"
            android:layout_gravity="center"
            android:textAlignment="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aviso_falha_internet2"
            android:textColor="@android:color/white"
            android:layout_gravity="center"
            android:textAlignment="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="bottom">
        <Button
            android:id="@+id/btn_retry"
            android:background="@drawable/button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/action_tentar"
            android:textColor="@android:color/white"/>
    </LinearLayout>

</LinearLayout>